# monorepo-dev-starter

./: .gitignore  README.md  commitlint.config.cjs  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  turbo.json
.cspell/: custom-words.txt
apps/backend/server/: package.json
apps/frontend/destop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/frontend/destop/src/: App.tsx  main.tsx  modules.ts  styles.css  types.ts
apps/frontend/destop/src-tauri/: Cargo.toml  tauri.conf.json
apps/frontend/destop/src-tauri/capabilities/: default.json
apps/frontend/destop/src-tauri/src/: lib.rs  main.rs
apps/frontend/destop/src/components/project/: CreateProjectModal.tsx  FolderContextMenu.tsx  RenameFolderModal.tsx
apps/frontend/destop/src/components/tianfu/: AddTalentModal.tsx  SeidEditorModal.tsx  SeidPickerModal.tsx  TalentForm.tsx  talent-domain.ts  talent-meta.ts
apps/frontend/destop/src/components/topbar/: AppTopBarMenu.tsx  TopBar.tsx
apps/frontend/destop/src/components/workspace/: EditorPanel.tsx  InfoPanel.tsx  ModuleSidebar.tsx  ProjectConfigForm.tsx
apps/frontend/destop/src/hooks/: useOutsideClick.ts  useSeidActiveSync.ts
apps/frontend/destop/src/services/: project-api.ts
apps/frontend/destop/src/themes/: default-theme.css
apps/frontend/destop/src/types/: fs.ts  index.ts  talent.ts
apps/frontend/destop/src/utils/: path.ts
apps/frontend/mobile/: package.json
apps/frontend/website/: package.json
doc/: tauri-react-editor.md
(+1 files in other folders)
