[package]
name = "baize_destop"
version = "0.1.0"
description = "Tauri desktop app for Baize editor"
authors = ["Isteyft"]
edition = "2021"

[lib]
name = "baize_destop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
